Back to simple working non-debug order

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,7 @@ add_executable(main
     src/states/MenuState.cpp
     src/states/PlayingState.cpp
     src/states/PausedState.cpp
-    src/states/GameOverState.cpp
-    src/debug/DebugLogger.cpp)
+    src/states/GameOverState.cpp)
 
 # Configure include directories
 target_include_directories(main PRIVATE 
