--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,9 @@ add_executable(main
     src/AI/AIPlayer.cpp
     src/AI/BaseStrategy.cpp
     src/AI/BasicStrategy.cpp
-    src/AI/AdvancedStrategy.cpp
     src/AI/RandomStrategy.cpp
-    src/AI/ManhattanStrategy.cpp)
+    src/AI/ManhattanStrategy.cpp
+    src/AI/AStarStrategy.cpp)
 
 # Configure include directories
 target_include_directories(main PRIVATE 
